--- a/src/main/resources/static/css/administrators/admin__vacancies.css
+++ b/src/main/resources/static/css/administrators/admin__vacancies.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
 }
 
-.light-gray-bg{
+.light-gray-bg {
     background: #f6f6f6;
 }
 
@@ -22,8 +22,18 @@ body {
 }
 
 .content {
+    text-align: center;
     padding: 0 20px;
     margin-top: 120px;
+}
+
+.submit {
+    margin: 20px auto;
+}
+
+.content_form {
+    text-align: left;
+    width: 250px;
 }
 
 .grid-button {
