--- a/src/main/resources/templates/administrators/admin__vacancy-requests.html
+++ b/src/main/resources/templates/administrators/admin__vacancy-requests.html
@@ -65,7 +65,7 @@
         </div>
     </div>
 </div>
-<script rel="script" type="text/javascript" th:src="@{/js/administrators/admin__vacancy-requests}"></script>
+<script rel="script" type="text/javascript" th:src="@{/js/administrators/admin__vacancy-requests.js}"></script>
 <script rel="script" type="text/javascript" th:src="@{/js/mobileMenu.js}"></script>
 </body>
 </html>
