--- a/src/main/resources/templates/managers/manager__main.html
+++ b/src/main/resources/templates/managers/manager__main.html
@@ -21,11 +21,23 @@
         </a>
     </div>
     <div class="managers-grid__buttons">
-        <a class="flex-column grid-button button">Purchase requests</a>
+        <a class="flex-column grid-button button">
+            Purchase requests
+            <div class="notification-number"></div>
+        </a>
+        <a th:href="@{/man/newWeapons}" class="flex-column grid-button button">
+            New weapons
+            <div class="notification-number"></div>
+        </a>
+        <a class="flex-column grid-button button">
+            Equipment change
+            <div class="notification-number"></div>
+        </a>
+        <a class="flex-column grid-button button">
+            Prawns' job applications
+            <div class="notification-number"></div>
+        </a>
         <a th:href="@{/man/prawnRegister}" class="flex-column grid-button button">Prawns registrations</a>
-        <a th:href="@{/man/newWeapons}" class="flex-column grid-button button">New weapons</a>
-        <a class="flex-column grid-button button">Prawns' job applications</a>
-        <a class="flex-column grid-button button">Equipment change</a>
     </div>
 </div>
 </body>
