--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -25,6 +25,7 @@
         </div>
         <a th:href="@{/sci/main/requests}" class="grid-button button">
             Requests
+            <div class="notification-number"></div>
         </a>
         <a th:href="@{/sci/article}" class="add-button grid-button button">
             Write article
