--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -60,6 +60,15 @@ select {
     color: #9e9e9e;
 }
 
+.notification-number {
+    position: absolute;
+    background: #ffd100;
+    border-radius: 100px;
+    padding: 2px 10px;
+    top: -8px;
+    right: -8px;
+}
+
 .button {
     color: black;
     text-decoration: none;
@@ -167,6 +176,12 @@ select {
 .flex-row-left {
     display: flex;
     justify-content: flex-start;
+}
+
+.flex-row-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .flex-row {
