--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -16,15 +16,32 @@
     </div>
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
     <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
-    <a class="flex-column district grid-button button">District</a>
-    <a th:href="@{/admin/experiments}" class="flex-column experiments-articles grid-button button">Experiments &
-        Articles</a>
-    <a class="flex-column clients-manufacturers grid-button button">Purchase & sale requests</a>
+    <a class="flex-column district grid-button button">
+        District
+        <div class="notification-number"></div>
+    </a>
+    <a th:href="@{/admin/experiments}" class="flex-column experiments-articles grid-button button">
+        Experiments & Articles
+        <div class="notification-number"></div>
+    </a>
+    <a class="flex-column clients-manufacturers grid-button button">
+        Purchase & sale requests
+        <div class="notification-number"></div>
+    </a>
     <a th:href="@{/admin/employee}" class="flex-column employees grid-button button">Employees</a>
-    <a th:href="@{/admin/vacancies}" class="flex-column prawn-vacancies grid-button button">Prawn vacancies</a>
-    <a th:href="@{/admin/newWeapons}" class="flex-column new-weapons grid-button button">New weapons</a>
+    <a th:href="@{/admin/vacancies}" class="flex-column prawn-vacancies grid-button button">
+        Prawn vacancies
+        <div class="notification-number"></div>
+    </a>
+    <a th:href="@{/admin/newWeapons}" class="flex-column new-weapons grid-button button">
+        New weapons
+        <div class="notification-number"></div>
+    </a>
     <a th:href="@{/admin/prawns}" class="flex-column prawn-registration grid-button button">Prawn registration</a>
-    <a class="flex-column prawn-job-applications grid-button button">Prawns' job applications</a>
+    <a class="flex-column prawn-job-applications grid-button button">
+        Prawns' job applications
+        <div class="notification-number"></div>
+    </a>
 </div>
 </body>
 </html>
