--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -25,6 +25,7 @@
         </a>
         <a th:href="@{/sci/main/requests}" class="grid-button button">
             Requests
+            <div class="notification-number"></div>
         </a>
         <a th:href="@{/sci/experiment}" class="add-button grid-button button">
             Add Experiment
