--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -10,7 +10,7 @@
 <body>
 <div class="desktop-header fixed-header fixed-header_small flex-row-right">
     You are logged in as ****
-    <a th:href="@{/}">
+    <a th:href="@{/profileClient}">
         <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     </a>
     <a th:href="@{/}">
@@ -67,7 +67,7 @@
 </div>
 
 <div class="mobile-footer flex-row-around">
-    <a th:href="@{/}">
+    <a th:href="@{/profileClient}">
         <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     </a>
     <a th:href="@{/}">
