--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="desktop-header fixed-header fixed-header_small flex-row-right">You are logged in as ****
-    <a th:href="@{/}">
+    <a th:href="@{/profileClient}">
         <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     </a>
     <a th:href="@{/}">
@@ -63,7 +63,7 @@
 </div>
 
 <div class="mobile-footer flex-row-around">
-    <a th:href="@{/}">
+    <a th:href="@{/profileClient}">
         <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     </a>
     <a th:href="@{/}">
