--- a/src/main/resources/templates/managers/manager__main.html
+++ b/src/main/resources/templates/managers/manager__main.html
@@ -23,21 +23,23 @@
     <div class="managers-grid__buttons">
         <a class="flex-column grid-button button">
             Purchase requests
-            <div class="notification-number"></div>
+            <div class="notification-number" th:if="${UNKNOWN > 0}"></div>
         </a>
         <a th:href="@{/man/newWeapons}" class="flex-column grid-button button">
             New weapons
-            <div class="notification-number"></div>
+            <div class="notification-number" th:if="${new_weap_count > 0}" th:text="${new_weap_count}"></div>
         </a>
         <a class="flex-column grid-button button">
             Equipment change
-            <div class="notification-number"></div>
+            <div class="notification-number" th:if="${eq_change_count > 0}" th:text="${eq_change_count}"></div>
         </a>
         <a class="flex-column grid-button button">
             Prawns' job applications
-            <div class="notification-number"></div>
+            <div class="notification-number" th:if="${vac_appl_count > 0}" th:text="${vac_appl_count}"></div>
         </a>
-        <a th:href="@{/man/prawnRegister}" class="flex-column grid-button button">Prawns registrations</a>
+        <a th:href="@{/man/registerPrawn}" class="flex-column grid-button button">
+            Prawns registrations
+        </a>
     </div>
 </div>
 </body>
