--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -25,7 +25,7 @@
         </a>
         <a th:href="@{/sci/main/requests}" class="grid-button button">
             Requests
-            <div class="notification-number"></div>
+            <div class="notification-number" th:if="${experimentCount > 0}" th:text="${experimentCount}"></div>
         </a>
         <a th:href="@{/sci/experiment}" class="add-button grid-button button">
             Add Experiment
