--- a/src/main/resources/templates/manufacturers/manufacturer__new-product.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__new-product.html
@@ -27,7 +27,7 @@
     <div class="font-big">
         You can suggest a new product here and it will appear on the market after our administrator's approval.
     </div>
-    <form action="#" th:action="@{/UNKNOWN}" th:object="${form}" method="post" class="content_form flex-column-left">
+    <form action="#" th:action="@{/manufacturer/newProduct}" th:object="${form}" method="post" class="content_form flex-column-left">
         <label class="form-item_big">
             <b>Name</b>
             <input id="name" name="name" class="input_big" required>
