--- a/src/main/resources/templates/manufacturers/manufacturer__new-vacancy.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__new-vacancy.html
@@ -27,7 +27,7 @@
     <div class="font-big">
         You can suggest a new vacancy for our prawns and it will be shown to them after our administrator's approval.
     </div>
-    <form action="#" th:action="@{/UNKNOWN}" th:object="${form}" method="post" class="content_form flex-column-left">
+    <form action="#" th:action="@{/manufacturer/newVacancy}" th:object="${form}" method="post" class="content_form flex-column-left">
         <label class="form-item_big">
             <b>Title</b>
             <input id="title" name="title" class="input_big" required>
