--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -78,6 +78,56 @@ a:hover {
     padding: 2px 10px;
 }
 
+.shop-item {
+    background-size: cover;
+    display: inline-block;
+    width: 240px;
+    height: 240px;
+    border: 2px solid black;
+    border-radius: 30px;
+    text-align: center;
+    padding: 12px;
+    word-break: break-word;
+    margin: 20px;
+    float: left;
+}
+
+.shop-item_assault {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/assault.png");
+}
+
+.shop-item_pistol {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/pistol.svg");
+}
+
+.shop-item_melee {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/melee.png");
+}
+
+.shop-item_smg {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/smg.png");
+}
+
+.shop-item_lmg {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/minigun.png");
+}
+
+.shop-item_sniper {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/sniper.png");
+}
+
+.shop-item_alien {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/alien.png");
+}
+
+.shop-item_land {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/land.png");
+}
+
+.shop-item_air {
+    background-image: linear-gradient(to bottom, rgba(246, 246, 246, 0.94), rgba(246, 246, 246, 0.94)), url("../images/air.png");
+}
+
 @media (max-width: 700px) {
     .grid {
         grid: "mobile-header" "search-bar" "catalogue";
