--- a/src/main/resources/static/css/administrators/admin__vacancies.css
+++ b/src/main/resources/static/css/administrators/admin__vacancies.css
@@ -22,10 +22,15 @@ body {
     float: left;
 }
 
+.vacancy-item_big {
+    width: 320px;
+    height: 320px;
+}
+
 .content {
     text-align: center;
-    padding: 0 60px;
-    margin-top: 120px;
+    padding: 0 4vw;
+    margin-top: 100px;
 }
 
 .submit {
@@ -36,6 +41,16 @@ body {
     text-align: left;
     width: 250px;
 }
+
+.button-flex-row {
+    display: flex;
+    justify-content: center;
+}
+
+.button-flex-row * {
+    margin: 0 15px;
+}
+
 
 .grid-button {
     width: 13vw;
@@ -50,9 +65,24 @@ body {
 }
 
 @media (max-width: 700px) {
+    .content {
+        margin-top: 85px;
+    }
+
     .grid-button {
         margin: 15px auto;
         font-size: 22px;
         width: 80vw;
+    }
+
+    .button-flex-row * {
+        font-size: 18px;
+        margin: 0 6px;
+    }
+}
+
+@media (max-width: 420px) {
+    .vacancy-item_big {
+        width: 250px;
     }
 }
