--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -31,11 +31,11 @@
     <a th:href="@{/admin/employee}" class="flex-column employees grid-button button">Employees</a>
     <a th:href="@{/admin/vacancies}" class="flex-column prawn-vacancies grid-button button">
         Prawn vacancies
-        <div class="notification-number" th:if="${UNKNOWN > 0}"></div>
+        <div class="notification-number" th:if="${new_vac_count > 0}" th:text="${new_vac_count}"></div>
     </a>
     <a th:href="@{/admin/newWeapons}" class="flex-column new-weapons grid-button button">
         New weapons and transport
-        <div class="notification-number" th:if="${new_weap_count > 0}" th:text="${new_weap_count}"></div>
+        <div class="notification-number" th:if="${new_prod_count > 0}" th:text="${new_prod_count}"></div>
     </a>
     <a th:href="@{/admin/prawns}" class="flex-column prawn-registration grid-button button">Prawn registration</a>
     <a class="flex-column prawn-job-applications grid-button button">
