--- a/src/main/resources/templates/administrators/admin__new-vacancy.html
+++ b/src/main/resources/templates/administrators/admin__new-vacancy.html
@@ -19,13 +19,17 @@
         </a>
         <a th:href="@{/admin/main}" class="grid-button button button_back_mobile">Main menu</a>
         <a th:href="@{/admin/vacancies}" class="grid-button button"> All vacancies</a>
-        <a th:href="@{/admin/vacancies/requests}" class="grid-button button"> Requests</a>
+        <a th:href="@{/admin/vacancies/requests}" class="grid-button button">
+            Requests
+            <div class="notification-number" th:if="${new_vac_count > 0}" th:text="${new_vac_count}"></div>
+        </a>
         <div class="grid-button button button_pressed"> New vacancy</div>
     </div>
 </div>
 
 <div class="content flex-column">
-    <form action="#" th:action="@{/admin/addVacancy}" th:object="${form}" method="post" class="content_form flex-column-left">
+    <form action="#" th:action="@{/admin/addVacancy}" th:object="${form}" method="post"
+          class="content_form flex-column-left">
         <label class="form-item_big">
             <b>Title</b>
             <input id="title" name="title" class="input_big" required>
