--- a/src/main/resources/templates/prawns/prawn__profile.html
+++ b/src/main/resources/templates/prawns/prawn__profile.html
@@ -23,8 +23,16 @@
     <div class="profile">
         <h1 class="form-item_micro" th:text="${user.name}"></h1>
         <h3 th:if="${user.job}" th:text="${user.job.title}"></h3>
+        <h2>Stats</h2>
+        <div class="stats-item font-big">
+            <div>Karma</div>
+            <b th:text="${user.karma}"></b>
+        </div>
+        <div class="stats-item font-big">
+            <div>Money</div>
+            <b th:text="${user.balance}"></b>
+        </div>
         <div th:if="${user.job}">
-            <h2>Stats</h2>
             <div class="stats-item font-big">
                 <div>Salary</div>
                 <b th:text="${user.job.salary}"></b>
@@ -34,21 +42,22 @@
                 <b th:text="${user.job.workHoursPerWeek}"></b>
             </div>
         </div>
-        <h2>Security</h2>
-        <button id="change-password-button" class="button">Change password</button>
-        <form id="change-password-form" action="#" th:action="@{/changePass}" th:object="${form}" method="post"
-              class="hidden flex-column-left">
-            <label>
-                <b>Old password</b>
-                <input th:field="*{prevPass}" required type="password" class="input_big">
-            </label>
-            <label class="form-item">
-                <b>New Password</b>
-                <input th:field="*{newPass}" required type="password" class="input_big">
-            </label>
-            <input type="submit" class="button form-item" value="Confirm">
-        </form>
     </div>
+    <h2>Security</h2>
+    <button id="change-password-button" class="button">Change password</button>
+    <form id="change-password-form" action="#" th:action="@{/changePass}" th:object="${form}" method="post"
+          class="hidden flex-column-left">
+        <label>
+            <b>Old password</b>
+            <input th:field="*{prevPass}" required type="password" class="input_big">
+        </label>
+        <label class="form-item">
+            <b>New Password</b>
+            <input th:field="*{newPass}" required type="password" class="input_big">
+        </label>
+        <input type="submit" class="button form-item" value="Confirm">
+    </form>
+</div>
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/profile.js}"></script>
 </body>
