prawns vacancies interface wip

--- a/src/main/resources/templates/prawns/prawn__main.html
+++ b/src/main/resources/templates/prawns/prawn__main.html
@@ -21,7 +21,7 @@
             <img alt="karma" th:src="@{/images/karma.png}" class="menu-item icon_big">
             <div class="font-huge" th:text="${user.karma}"></div>
         </div>
-        <a class="flex-column button menu-item">
+        <a th:href="@{/prawn/vacancies}" class="flex-column button menu-item">
             <img alt="vacancies" th:src="@{/images/job.png}" class="icon_giant">
             <div class="font-huge"> Apply for a job</div>
         </a>
@@ -31,7 +31,7 @@
             <img alt="money" th:src="@{/images/gold_coin.png}" class="menu-item icon_big">
             <div class="font-huge" th:text="${user.balance}"></div>
         </div>
-        <a class="flex-column button menu-item">
+        <a th:href="@{/prawn/shop}" class="flex-column button menu-item">
             <img alt="store" th:src="@{/images/prawn_cart.png}" class="icon_giant">
             <div class="font-huge"> Buy items</div>
         </a>
