prawn vacancies hiding and sorting

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -40,6 +40,10 @@ select {
     margin-top: 40px;
 }
 
+.form-item_middle {
+    margin-top: 30px;
+}
+
 .form-item_small {
     margin-top: 10px;
 }
